fix(search-bar): wrap search button

--- a/src/components/SearchBar/SearchButton.css
+++ b/src/components/SearchBar/SearchButton.css
@@ -1,5 +1,6 @@
 .btn-search{
     height: 48px;
+    min-width: 48px;
     border-radius: 24px;
     background-color: #FF385C;
     display: flex;
@@ -7,9 +8,9 @@
     align-items: center;
     color: white;
     cursor: pointer;
-    margin-right: 9px;
+
     flex: 0 0 auto;
-    z-index: 5;
+
 }
 .btn-search-text{
     padding:0 4px 0 8px;
